# kcorrect

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  BUGS  CHANGELOG.rst  CNAME  CODEOWNERS  INSTALL  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE_NOTES  TODO  VERSION  index.html  initkcorrect  pyproject.toml  readthedocs.yml  requirements.txt  requirements_doc.txt  setup.cfg  setup.py  user_list  v3_1b_msg
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  build-documentation.yml  linting.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  smoke-test.yml  testing-and-coverage.yml
_results/gh-runner/: machine.json
benchmarks/: asv.conf.json  benchmarks.py
data/: Makefile
data/dustmodels/: extract_witt  table3_shell.txt
data/etemplates/: README  default.in  default.pts  default.sav
data/filters/: BASS-g.par  H_ISAAC.par  J_ISAAC.par  Ks_ISAAC.par  README  acs_f435w.par  acs_f606w.par  acs_f775w.par  acs_f850lp.par  alhambra_396.par  alhambra_427.par  alhambra_675.par  alhambra_799.par  alhambra_J.par  alhambra_KS.par  bass_r.par  bessell_B.par  bessell_I.par  bessell_R.par  bessell_U.par  bessell_V.par  bessellheader  bok_90prime_z.par  capak_cfht_megaprime_sagem_i.par  capak_cfht_megaprime_sagem_z.par  capak_cfht_wircam_Ks.par  capak_subaru_suprimecam_g.par  cfh12k_B.par  cfh12k_z.par  clash_acs_f435w.par  clash_acs_f475w.par  clash_acs_f555w.par  clash_acs_f606w.par  clash_acs_f625w.par  clash_acs_f775w.par  clash_acs_f814w.par  clash_acs_f850lp.par  clash_wfc3_f105w.par  clash_wfc3_f110w.par  clash_wfc3_f125w.par  (+114 more)
data/seds/: README
data/templates/: .cvsignore  k_nmf_derived.default.fits  k_nmf_derived.dust4m.fits  k_nmf_derived.goods.fits  k_nmf_derived.lrg1.fits  k_nmf_derived.nmf5.fits  k_nmf_derived.photo4m.fits  k_nmf_derived.spec4m.fits  k_nmf_derived.spec5m.fits  k_nmf_soln.default.fits  k_nmf_soln.dust4m.fits  k_nmf_soln.goods.fits  k_nmf_soln.lrg1.fits  k_nmf_soln.nmf10.fits  k_nmf_soln.nmf20.fits  k_nmf_soln.nmf4.fits  k_nmf_soln.nmf5.fits  k_nmf_soln.photo4m.fits  k_nmf_soln.spec4m.fits  k_nmf_spec.lrg1.fits  k_nmf_spec.nmf4.fits  k_nmf_spec.nmf5.fits
data/test/: .cvsignore  calibplate_test.fits  obj_test.fits  swire_tests.fits
docs/: CHANGELOG.rst  Makefile  api.rst  conf.py  examples.rst  index.rst  install.rst  intro.rst  mk_doc  new.rst  requirements.txt  templates.rst  v_11_msg
docs/html/: .cvsignore  ascii.html  index-old.html  index.html  install.sh  linear.ps  photoz.html  v1-index.html  v1-photoz.html  v1_16-index.html  v3_1b-index.html  v3_2-index.html
docs/paper/: .cvsignore  Makefile  README.aastex  aastex.cls  aastex50.tar  aastexug.sty  astroph.abs  bib_paper.tex  broadband.tex  compareci.ps  comparecibreak.ps  deep2compare.tex  figures.tex  fitting.tex  fixfigs  fullfits.ps  galex_kcorrect.ps  galex_predicted.ps  galex_resid.ps  gmrz.ps  goods.ps  goods_special.ps  k_coeff_plot1.ps  k_coeff_plot2.ps  k_coeff_plot3.ps  k_coeffdist_plot.ps  k_kcorrect_plot.ps  k_linear.tex  k_linear_transform.ps  k_model_plot.ps  k_sfh.ps  k_speck_plot.0.1.ps  k_speck_plot.0.3.ps  k_speck_plot.fiber.0.1.ps  k_speck_plot.fiber.0.3.ps  k_speck_plot.fitfib.0.1.ps  k_speck_plot.fitfib.0.3.ps  kcorrect.tex  kcorrect_figures.tex  kcorrect_tables.tex  (+27 more)
docs/sphinx/: #api.rst#  CHANGELOG.rst  Makefile  api.rst  api.rst.~1~  basics.rst  conditions.rst  conf.py  conf.py.~1~  examples.rst  index.rst  index.rst.~1~  intro.rst  intro.rst.~1~  new.rst  requirements.txt
etc/: config.ini  kcorrect.module
include/: Makefile  kcorrect.h
lib/: Makefile  README  kcorrect.py
pro/: Makefile  k_adjustnn_templates.pro  k_bmatrix_plot.pro  k_bspline2.pro  k_coeff_plot.pro  k_coeffdist_plot.pro  k_colors_plot.pro  k_create_acs_filters.pro  k_create_plots.pro  k_create_r.pro  k_discont.pro  k_distribution.pro  k_espec_plot.pro  k_excise_halpha.pro  k_fit_coeffs.pro  k_fit_nonneg.pro  k_fit_nonneg_photoz.pro  k_fit_photoz.pro  k_fit_sed.pro  k_fit_templates.pro  k_fit_training_set.pro  k_fitnn_coeffs.pro  k_fitnn_templates.pro  k_fix_mags.pro  k_get_locus.pro  k_gmr_ktable.pro  k_interp_pegase.pro  k_kcorrect_grdiff_plot.pro  k_kcorrect_plot.pro  k_lambda_eff.pro  k_load_ascii_table.pro  k_load_filters.pro  k_load_templates.pro  k_make_aelines.pro  k_make_ktable.pro  k_make_training_set.pro  k_make_v3_0_templates.pro  k_mkspec_gissel.pro  k_mkspec_pegase.pro  k_mkspec_qso.pro  (+33 more)
pro/fit/: deep_kcorrect.pro  fit_sdss_fiber.pro  galex_kcorrect.pro  goods_kcorrect.pro  gst_kcorrect.pro  k_fit_image.pro  k_fit_nonneg.pro  k_fit_photoz.pro  k_fit_sdss_training_set.pro  k_fit_spec.pro  k_fit_templates.pro  k_ortho_templates.pro  k_projection_table.pro  k_reconstruct_maggies.pro  k_reconstruct_spec.pro  k_run_nmf.pro  k_sdssfix.pro  k_tweak_photoz.pro  k_tweak_templates.pro  kcorrect.pro  kphotoz.pro  sdss2bands.pro  sdss2bessell.pro  sdss2deep.pro  sdss2goods.pro  sdss_kcorrect.pro  sdss_kphotoz.pro  twomass_kcorrect.pro
pro/lf/: k_evolve.pro  lf_amdist_plot.pro  lf_calc_vmax.pro  lf_comvol.pro  lf_create_mock.pro  lf_distmod.pro  (+38 more)
sm/: grgap.sm  plottemplate.sm  response.sm  spur.sm
src/: Makefile  README  color_interp.c  export.h  fit_coeffs.c  fit_photoz.c  gaussj.c  idl_Vtoz.c  idl_k_binspec.c  idl_k_create_r.c  idl_k_fit_coeffs.c  idl_k_fit_nonneg.c  idl_k_fit_photoz.c  idl_k_fit_spec.c  idl_k_fit_spec_linear.c  idl_k_fit_templates.c  idl_k_model_fluxes.c  idl_k_projection_table.c  idl_k_qld.c  idl_k_reconstruct_maggies.c  idl_lf_calc_vmax.c  idl_lf_eep.c  idl_lf_select_eep.c  idl_t2z.c  idl_z2dm.c  idl_z2t.c  idl_ztoV.c  iterate_lf.c  k_binspec.c  k_brent.c  k_choldc.c  k_cholsl.c  k_create_r.c  k_ddot.f  k_dgemm.f  k_dgemv.f  k_dposv.f  k_dpotf2.f  k_dpotrf.f  k_dpotrs.f  (+59 more)
test/: .cvsignore  K.sm  Makefile  README  colors.sm  compareci.sm  comparecibreak.sm  run_scalecheck  run_test  sample.fits  testK.sm  test_all.pro  test_kcorrect.pro  testsp.fits  testz.sm  testzlrg.sm  ugr.sm
tests/: test_filter.py  test_fitter.py  test_kcorrect.py  test_response.py  test_sed.py
ups/: Makefile  kcorrect.table
(+1167 files in other folders)
