[project]
name = "kcorrect"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "Michael R. Blanton", email = "michael.blanton@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.2", 
    "numpy>=1.18.1", 
    "scipy>=1.8.1", 
    "astropy>=3.0.0", 
]

[project.urls]
"Source Code" = "https://github.com/blanton144/kcorrect"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "ruff", # Used for static linting of files
# before updating
  #  "pre-commit", # Used to run checks before finalizing a git commit
  #  "sphinx", # Used to automatically generate documentation
  #  "sphinx-rtd-theme", # Used to render documentation
  #  "sphinx-autoapi", # Used to automatically generate api documentation
  #  "pylint", # Used for static linting of files
  #  # if you add dependencies here while experimenting in a notebook and you
  #  # want that notebook to render in your documentation, please add the
  #  # dependencies to ./docs/requirements.txt as well.
  #  # "nbconvert", # Needed for pre-commit check to clear output from Python notebooks
  #  "nbsphinx", # Used to integrate Python notebooks into Sphinx documentation
  #  # "ipython", # Also used in building notebooks into Sphinx
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/kcorrect/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",

]

ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]

[tool.coverage.run]
omit=["src/kcorrect/_version.py"]
