[metadata]
name = kcorrect
version = 5.0.0b
author = Michael Blanton
author_email = michael.blanton@gmail.com
description = K-correction calculator
url = https://github.com/blanton144/kcorrect
project_urls =
	Repository = https://github.com/blanton144/kcorrect
	Documentation = https://kcorrect.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
	= python
include_package_data = True
install_requires =
	matplotlib>=3.5.2
	numpy>=1.18.1
	scipy>=1.8.1
	astropy>=3.0.0
	pydl>=0.7.0
	fitsio>=1.1.1
scripts =

[options.packages.find]
where =
	python

[options.package_data]
kcorrect =
	etc/*
	data/templates/*
	data/basel/*
	data/responses/*

[options.extras_require]
dev =
	ipython>=7.9.0
	matplotlib>=3.1.1
	flake8>=3.7.9
	doc8>=0.8.0
	pytest>=5.2.2
	pytest-asyncio>=0.10.0
	pytest-cov>=2.8.1
	pytest-mock>=1.13.0
	pytest-sugar>=0.9.2
	isort>=4.3.21
	codecov>=2.0.15
	coverage[toml]>=5.0
	ipdb>=0.12.3
	invoke>=1.3.0
	twine>=3.1.1
	wheel>=0.33.6
	sphinx>=3.0.0

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = kcorrect
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
	H101
	E722
	W504
	W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov kcorrect --cov-report html -W ignore

[coverage:run]
branch = true
include =
	python/kcorrect/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
